# wgpu_demo

./: .gitignore  Cargo.toml  README.md
src/: framework.rs  lib.rs  main.rs
src/bunnymark/: mod.rs  shader.wgsl
src/cube/: mod.rs  shader.wgsl
src/hello/: mod.rs
src/hello_compute/: mod.rs
src/hello_triangle/: mod.rs  shader.wgsl
src/shadow/: README.md  mod.rs
src/skybox/: mod.rs  shader.wgsl
src/uniform_values/: mod.rs
src/water/: mod.rs
window/: Cargo.toml
window/src/: main.rs
