[package]
name = "wgpu-examples"
edition = "2021"
rust-version = "1.82.0"

[package.metadata.cargo-machete]
# Cargo machete struggles with this dev dependency:
ignored = ["wasm_bindgen_test"]

[lib]
path = "src/lib.rs"
harness = false

[[bin]]
name = "wgpu-examples"
path = "src/main.rs"
test = false

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]

bytemuck = {  version = "1.19" , features = ["derive"] }
cfg-if = "1"
encase = { version="0.9", features = ["glam"] }
flume="0.11"
getrandom = "0.2"
glam = "0.28"
ktx2 = "0.3"
log = "0.4"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
noise = "0.9"
obj = "0.10"
png = "0.17.14"
pollster = "0.3"
web-time = "0.2.4"
wgpu = {version="22.0.0", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
] }
winit = { version = "0.29", features = ["android-native-activity"] }
# 表示是一个开发依赖项
# [dev-dependencies]
# wgpu-test="22.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
fern = "0.6"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
# We need these features in the framework examples and tests
web-sys = { version = "0.3.72", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"